--- a/FriendOrganizer.DataAccess/FriendOrganizer.DataAccess.csproj
+++ b/FriendOrganizer.DataAccess/FriendOrganizer.DataAccess.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Migrations\201711041005237_AddedPhooneNum.Designer.cs">
       <DependentUpon>201711041005237_AddedPhooneNum.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711041942064_AddedMeeting.cs" />
+    <Compile Include="Migrations\201711041942064_AddedMeeting.Designer.cs">
+      <DependentUpon>201711041942064_AddedMeeting.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -82,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711041005237_AddedPhooneNum.resx">
       <DependentUpon>201711041005237_AddedPhooneNum.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711041942064_AddedMeeting.resx">
+      <DependentUpon>201711041942064_AddedMeeting.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
